Snapshot dae3ebe8d1

Snapshot 306d32832f

* Associate ctrl+s to keep. (rwh)

Snapshot 73cae198f5

* Remove the startup sound for now, to not break audio
  for all the activities. (marco)

Snapshot 0a9676171d

* #4650: Failure to write journal files. (marco)

Snapshot ee8712d1c4

* #3119: Implement some basic search capabilities in the mesh view. (tomeu)

Snapshot d456f6c633

* New experimental screenshot code. (marco)

Snapshot e748f756c0

* #4618: Make the shell service more resilient to failure. (tomeu)

Snapshot 39aca0154d

* Get bundle installation to work again. (marco)

Snapshot b6422678e6

* #1941 Call FocusSearch method for popping up the journal. (rwh)

Snapshot 2df96b9af7

* #4552 Allow to open images in Paint (marco)
* #4518: Encode nickname in UTF-8 when writing it out to .sugar/*/config (smcv)
* sugar-control: Use NM for radio on/off, check for superuser (erikos)

Snapshot b72f00e30b

* #4517 Do not require a TakeScreenshot method on the dbus service (marco)
* Add wep type combo. (dcbw)

Snapshot 8c89bfaed7

* #4503: Do some standard Tubes boilerplate in sugar.presence, so activities
  don't have to (smcv)
* #4428 Revert to the trial-3 frame behavior (marco)
* Initial push for the sugar control panel (erikos)
* #4358: pydoc strings for sugar.activity.Activity

Snapshot 176262f2e9

* Added morgs NotifyAlert (timed one button alert) to the alert api (erikos)

Snapshot fdb4e49b14

* Save journal files on nand, not tmpfs (tomeu)

Snapshot 3bae39c06c

* Make <alt> keybindings work again (marco)

Snapshot 606346b18c

* #4238: Handle double BuddyLeft in handle tracking in sugar.presence (morgs)

Snapshot 57402cf309

* Add new keybindings (Ctrl+Q, Ctrl+escape) for close activity (erikos)
* Add a keybinding (alt+space) to activity window to hide/show tray (erikos)

Snapshot efd0bbd326

* Add support to be able to remove an alert which is not the top 
one on the queue (erikos)
* Fullscreen support (hide toolbar and tray) and tray support in activity 